--- a/styles/partials/_footer.scss
+++ b/styles/partials/_footer.scss
@@ -61,13 +61,14 @@
             margin-left: 9px;
         }
 
-        .footer_logos {    
+        .footer_logos {   
+            margin-left: 250px;
             max-width: 50%;        
             background-color: blue;
 
             .footer_logos_img {
                 height: 30px;
-                width: 30px;                
+                width: 40px;                
             }
         }
     }
