--- a/styles/partials/_alvoroca.scss
+++ b/styles/partials/_alvoroca.scss
@@ -8,7 +8,7 @@
                     "article"
                     "main"
                     "footer";
-    grid-template-columns: 1fr;
+    grid-template-columns: 450px;
     grid-template-rows: 110px auto auto 80px;
 
     .alvoroca_header{
@@ -16,20 +16,25 @@
         display: grid;
         grid-template-columns: auto 80%;
         background-color: red;     
+        color: yellowgreen;
 
         .alvoroca_navbar {
-            display: flex;
-            justify-content: space-between;
+            display: flex;           
+            align-items: center;
             font-size: 20px;
-            margin-right: 4px;
             border: solid 1px;
+            padding-left: 60px;
+            padding-right: 15px;
         
             .alvoroca_nav_list {
             display: flex;
             flex-wrap: wrap;
             justify-content: space-between;
+            margin-right: 10px;
             li {
                 margin-right: 3px;
+                color: yellowgreen;
+                text-decoration: none;
             }
             }
         }
