--- a/styles/partials/_alvoroca.scss
+++ b/styles/partials/_alvoroca.scss
@@ -29,7 +29,7 @@
             .alvoroca_nav_list {
             display: flex;
             flex-wrap: wrap;
-            justify-content: space-between;
+            justify-content: space-around;
             margin-right: 10px;
             li {
                 margin-right: 3px;
