--- a/styles/partials/_alvoroca.scss
+++ b/styles/partials/_alvoroca.scss
@@ -30,11 +30,15 @@
             display: flex;
             flex-wrap: wrap;
             justify-content: space-around;
-            margin-right: 10px;
+            margin-right: 30px;
             li {
-                margin-right: 3px;
-                color: yellowgreen;
+                margin-right: 5px;
                 text-decoration: none;
+                
+                a{
+                    text-decoration: none;
+                    color: gold;
+                }
             }
             }
         }
@@ -51,44 +55,36 @@
     .alvoroca_article {
         grid-area: article;   
         display: grid;
-        grid-template-columns: 70% 30%;
+        grid-template-columns: 60% auto;
         flex-direction: row;
         background-color: pink;
         padding-top: 60px;
         padding-bottom: 30px;
+
         .card_image {
             margin-left: 10px;
             .card_images{                                                                    
-                width: 200px;
-                height: 240px;
+                width: 230px;
+                height: 260px;
                 border: solid 1px;
                     
             }
         }
-
 
         .card_text{
             padding-top: 60px;
             display: flex;
             flex-direction: column;
             justify-content: space-around;
-            // height: 100%;
+            padding-left: 10px;
             align-items: flex-start;
-
             .card_title{                
                 font-size: 1.6em;
                 text-shadow: 1px 1px;                
-                // text-decoration: solid;
-                
-
-
             }
-
-
             a{                                                
                 text-decoration: none;
-                color: green;
-                
+                color: green;       
             }                
         }     
             
