--- a/styles/styles.css
+++ b/styles/styles.css
@@ -295,12 +295,15 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  margin-right: 10px;
+  margin-right: 30px;
 }
 .alvoroca_container .alvoroca_header .alvoroca_navbar .alvoroca_nav_list li {
-  margin-right: 3px;
-  color: yellowgreen;
+  margin-right: 5px;
   text-decoration: none;
+}
+.alvoroca_container .alvoroca_header .alvoroca_navbar .alvoroca_nav_list li a {
+  text-decoration: none;
+  color: gold;
 }
 .alvoroca_container .alvoroca_header .alvo_logo {
   width: 80px;
@@ -312,7 +315,7 @@
 .alvoroca_container .alvoroca_article {
   grid-area: article;
   display: grid;
-  grid-template-columns: 70% 30%;
+  grid-template-columns: 60% auto;
   flex-direction: row;
   background-color: pink;
   padding-top: 60px;
@@ -322,8 +325,8 @@
   margin-left: 10px;
 }
 .alvoroca_container .alvoroca_article .card_image .card_images {
-  width: 200px;
-  height: 240px;
+  width: 230px;
+  height: 260px;
   border: solid 1px;
 }
 .alvoroca_container .alvoroca_article .card_text {
@@ -331,6 +334,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  padding-left: 10px;
   align-items: flex-start;
 }
 .alvoroca_container .alvoroca_article .card_text .card_title {
