--- a/styles/partials/_alvoroca.scss
+++ b/styles/partials/_alvoroca.scss
@@ -31,8 +31,10 @@
             flex-wrap: wrap;
             justify-content: space-around;
             margin-right: 30px;
+            align-items: center;
             li {
-                margin-right: 5px;
+                margin-right: 7px;
+                margin-top: 8px;
                 text-decoration: none;
                 
                 a{
