--- a/styles/styles.css
+++ b/styles/styles.css
@@ -281,7 +281,6 @@
   display: grid;
   grid-template-columns: auto 80%;
   background-color: red;
-  color: yellowgreen;
 }
 .alvoroca_container .alvoroca_header .alvoroca_navbar {
   display: flex;
@@ -306,6 +305,9 @@
 .alvoroca_container .alvoroca_header .alvoroca_navbar .alvoroca_nav_list li a {
   text-decoration: none;
   color: gold;
+}
+.alvoroca_container .alvoroca_header .alvoroca_navbar .alvoroca_nav_list li .alvoroca_link {
+  color: rgb(200, 186, 186);
 }
 .alvoroca_container .alvoroca_header .alvo_logo {
   width: 80px;
