--- a/styles/partials/_footer.scss
+++ b/styles/partials/_footer.scss
@@ -1,35 +1,34 @@
 //   MOBILE FIRST   
 
 .footer {
-    display: flex;
     grid-area: footer;
     height: 130px;
-    justify-content: space-evenly;
-    align-items: center;
-    background-color: yellow;
-    font-size: 0.8rem;
-    width: 100%;
+    background-color: olive;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+
 
     .footer_text {
-        width: 20%;
+        font-size: 0.8rem;
+        margin-left: 5px;
+        margin-top: 90px;
+        color: yellow;
         display: flex;
-        justify-content: left;
-        margin-top: 100px;
+        align-items: center;
         
     }
 
     .footer_logos {
-        width: 70%;
         display: flex;
         flex-direction: row;
-        flex-wrap: wrap;
+        align-items: center;
         justify-content: right;
-        margin-right: 15px;
+        margin-right: 30px;
 
         .footer_logos_img {
             width: 40px;
-            padding-right: 10px;
-            margin-left: 20px;
+            margin-left: 9px;
+
         }
     }
 }
