--- a/styles/partials/_alvoroca.scss
+++ b/styles/partials/_alvoroca.scss
@@ -5,17 +5,18 @@
     display: grid;
     grid-template-areas:
                     "header"
+                    "banner"
                     "article"
                     "main"
                     "footer";
     grid-template-columns: 450px;
-    grid-template-rows: 110px auto auto 80px;
+    grid-template-rows: 120px auto auto auto 80px;
 
     .alvoroca_header{
         grid-area: header;
         display: grid;
-        grid-template-columns: auto 80%;
-        background-color: red;     
+        grid-template-columns: 30% 70%;
+        background-color: olive;     
 
         .alvoroca_navbar {
             display: flex;           
@@ -29,10 +30,10 @@
             display: flex;
             flex-wrap: wrap;
             justify-content: space-around;
-            margin-right: 30px;
+            margin-right:30px;
             align-items: center;
             li {
-                margin-right: 7px;
+                margin-right: 10px;
                 margin-top: 8px;
                 text-decoration: none;
                 
@@ -48,12 +49,20 @@
         }
 
         .alvo_logo {
-            width: 80px;
-            height: 80px;
+            width: 100px;
+            height: 100px;
             padding-top: 10px;
             padding-left: 5px;
             margin-right: 10px;
         }
+    }
+
+    .alvoroca_banner{
+        // background-color: navy;
+        .banner_img{
+            height: 100%;
+            width: 450px;
+        }        
     }
 
     .alvoroca_article {
@@ -62,7 +71,7 @@
         grid-template-columns: 60% auto;
         flex-direction: row;
         background-color: pink;
-        padding-top: 60px;
+        padding-top: 40px;
         padding-bottom: 30px;
         padding-left: 20px;
    
