worked on alvoroca

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -271,46 +271,54 @@
   display: grid;
   grid-template-areas: "header" "banner" "article" "main" "footer";
   grid-template-columns: 450px;
-  grid-template-rows: 120px auto auto auto 80px;
+  grid-template-rows: 130px auto auto auto 80px;
 }
 .alvoroca_container .alvoroca_header {
   grid-area: header;
   display: grid;
   grid-template-columns: 30% 70%;
-  background-color: olive;
+  background-color: white;
 }
 .alvoroca_container .alvoroca_header .alvoroca_navbar {
   display: flex;
   align-items: center;
-  font-size: 20px;
-  border: solid 1px;
   padding-left: 60px;
   padding-right: 15px;
 }
 .alvoroca_container .alvoroca_header .alvoroca_navbar .alvoroca_nav_list {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
-  margin-right: 30px;
+  justify-content: space-evenly;
+  margin-right: 20px;
   align-items: center;
+  width: 100%;
 }
 .alvoroca_container .alvoroca_header .alvoroca_navbar .alvoroca_nav_list li {
-  margin-right: 10px;
+  margin-right: 13px;
   margin-top: 8px;
   text-decoration: none;
 }
 .alvoroca_container .alvoroca_header .alvoroca_navbar .alvoroca_nav_list li a {
   text-decoration: none;
-  color: gold;
+  color: rgb(144, 144, 241);
+  font-size: 1.3rem;
 }
 .alvoroca_container .alvoroca_header .alvoroca_navbar .alvoroca_nav_list li .alvoroca_link {
-  color: rgb(200, 186, 186);
+  color: rgb(178, 178, 246);
+  font-size: 1.5rem;
 }
-.alvoroca_container .alvoroca_header .alvo_logo {
-  width: 106px;
-  height: 106px;
+.alvoroca_container .alvoroca_header .alvoroca_logo {
   padding-top: 10px;
-  padding-left: 10px;
+  padding-left: 20px;
+}
+.alvoroca_container .alvoroca_header .alvoroca_logo .alvo_logo {
+  padding-left: 0px;
+  width: 120px;
+  height: 110px;
+}
+.alvoroca_container .alvoroca_banner {
+  margin-top: 40px;
+  background-color: white;
 }
 .alvoroca_container .alvoroca_banner .banner_img {
   height: 100%;
@@ -321,8 +329,8 @@
   display: grid;
   grid-template-columns: 60% auto;
   flex-direction: row;
-  background-color: pink;
-  padding-top: 40px;
+  background-color: whitesmoke;
+  padding-top: 80px;
   padding-bottom: 30px;
   padding-left: 20px;
 }
@@ -342,10 +350,14 @@
 .alvoroca_container .alvoroca_article .card_text .card_title {
   font-size: 1.6em;
   text-shadow: 1px 1px;
+  color: rgb(151, 151, 240);
 }
 .alvoroca_container .alvoroca_article .card_text a {
   text-decoration: none;
-  color: green;
+  color: rgb(161, 161, 245);
+}
+.alvoroca_container .alvoroca_article .card_text .addlink {
+  font-size: 1.4rem;
 }
 .alvoroca_container .alvoroca_main {
   grid-area: main;
@@ -353,13 +365,13 @@
   grid-template-columns: 1fr 1fr;
   height: auto;
   width: 100%;
-  background-color: red;
+  background-color: whitesmoke;
   align-items: center;
   padding: 50px 20px 20px 30px;
   gap: 40px;
 }
 .alvoroca_container .alvoroca_main .card {
-  width: 140px;
+  width: 170px;
   height: auto;
   border: solid 1px;
   border-radius: 0px 0px 5px 5px;
@@ -367,19 +379,21 @@
   margin-right: 20px;
 }
 .alvoroca_container .alvoroca_main .card .card_images {
-  height: 170px;
+  height: 180px;
   width: 100%;
 }
 .alvoroca_container .alvoroca_main .card .card_description {
   margin-top: 8px;
   margin-left: 8px;
+  color: rgb(97, 97, 243);
 }
 .alvoroca_container .alvoroca_main .card .card_description .card_title {
   margin-bottom: 10px;
 }
 .alvoroca_container .alvoroca_main .card .card_description a {
+  margin-top: 30px;
   text-decoration: none;
-  color: gold;
+  color: rgb(122, 122, 246);
   display: flex;
   justify-content: flex-end;
   margin-right: 14px;
