--- a/styles/styles.css
+++ b/styles/styles.css
@@ -277,7 +277,7 @@
   grid-area: header;
   display: grid;
   grid-template-columns: 30% 70%;
-  background-color: white;
+  background-color: whitesmoke;
 }
 .alvoroca_container .alvoroca_header .alvoroca_navbar {
   display: flex;
@@ -318,7 +318,7 @@
 }
 .alvoroca_container .alvoroca_banner {
   margin-top: 40px;
-  background-color: white;
+  background-color: whitesmoke;
 }
 .alvoroca_container .alvoroca_banner .banner_img {
   height: 100%;
